--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         size: { w, h }
                     }
                 }) {
-                    fw.graphics.drawRectangle({ x: x, y, w, h });
+                    fw.graphics.drawRectangle({ x, y, w, h });
                 }
             });
 
