--- a/demos/particles.html
+++ b/demos/particles.html
@@ -9,8 +9,9 @@
 <body>
     <canvas id='fw-canvas' width="1000" height="1000" style="width: 50%; background-color: blue;"></canvas>
     
-    <script src="../fw/graphics.js"></script>
+    <script src='../demos/particles.js'></script>
+    <!-- <script src="../fw/graphics.js"></script>
     <script src="../fw/ParticleSystem.js"></script>
-    <script src="../fw/particles.js"></script>
+    <script src="../fw/particles.js"></script> -->
 </body>
 </html>
